SERVER-110620 : Adapt microseconds for dates before epoch (#42375)

GitOrigin-RevId: 0eab36f3dbe35d8e936243aeb37cf67ba3aa46ef