src/mongo/db/query/datetime/date_time_support.cpp
@@ -70,6 +70,12 @@ std::unique_ptr<_timelib_time, TimeZone::TimelibTimeDeleter> createTimelibTime()
     return std::unique_ptr<_timelib_time, TimeZone::TimelibTimeDeleter>(timelib_time_ctor());
 }
 
+int getMilliseconds(const Date_t& date) {
+    const int ms = date.toMillisSinceEpoch() % 1000LL;
+    // Add 1000 since dates before 1970 would have negative milliseconds.
+    return ms >= 0 ? ms : 1000 + ms;
+}
+
 // Converts a date to a number of seconds, being careful to round appropriately for negative numbers
 // of seconds.
 long long seconds(Date_t date) {
@@ -501,9 +507,7 @@ TimeZone::DateParts::DateParts(const timelib_time& timelib_time, Date_t date)
       hour(timelib_time.h),
       minute(timelib_time.i),
       second(timelib_time.s) {
-    const int ms = date.toMillisSinceEpoch() % 1000LL;
-    // Add 1000 since dates before 1970 would have negative milliseconds.
-    millisecond = ms >= 0 ? ms : 1000 + ms;
+    millisecond = getMilliseconds(date);
 }
 
 TimeZone::Iso8601DateParts::Iso8601DateParts(const timelib_time& timelib_time, Date_t date)
@@ -521,10 +525,7 @@ TimeZone::Iso8601DateParts::Iso8601DateParts(const timelib_time& timelib_time, D
     year = static_cast<int>(tmpIsoYear);
     weekOfYear = static_cast<int>(tmpIsoWeekOfYear);
     dayOfWeek = static_cast<int>(tmpIsoDayOfWeek);
-
-    const int ms = date.toMillisSinceEpoch() % 1000LL;
-    // Add 1000 since dates before 1970 would have negative milliseconds.
-    millisecond = ms >= 0 ? ms : 1000 + ms;
+    millisecond = getMilliseconds(date);
 }
 
 
@@ -1176,7 +1177,7 @@ Date_t dateAdd(Date_t date, TimeUnit unit, long long amount, const TimeZone& tim
             isDateAddAmountValid(amount, unit));
 
     auto localTime = timezone.getTimelibTime(date);
-    auto microSec = durationCount<Microseconds>(Milliseconds(date.toMillisSinceEpoch() % 1000));
+    auto microSec = durationCount<Microseconds>(Milliseconds(getMilliseconds(date)));
     localTime->us = microSec;
 
     // Check if an adjustment for the last day of month is necessary.
